[project]
name = "at-lib"
version = "0.1.0"
author = "Alex Talbott"
description = "My interpretations of anything I find interesting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
]

[project.scripts]
at_lib = "at_lib.src:main"

[dependency-groups]
dev = [
    "hypothesis>=6.131.0",
    "jupyter>=1.1.1",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
