[project]
name = "at-lib"
version = "0.1.0"
authors = [
    {name = "Alex Talbott", email = "atalbott13@gmail.com"},
]
description = "My interpretations of anything I find interesting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mmh3>=5.1.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
at_lib = "at_lib.src:main"

[dependency-groups]
dev = [
    "hypothesis>=6.131.0",
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]


[tool.pytest.ini_options]
addopts = "--cov=at_lib --cov-report=html --verbose"

[tool.ruff]
extend-exclude = ["*.ipynb"]
force-exclude = true
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "F",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
